--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gh-pages": "^3.1.0",
     "prettier": "2.1.2"
   },
-  "license": "0BSD",
+  "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
